--- a/src/main/resources/templates/listEvents.html
+++ b/src/main/resources/templates/listEvents.html
@@ -24,9 +24,10 @@
   <form th:action="@{/events}" th:method="GET">
     <h3>Search Events</h3>
     <label for="searchText">Event Name:</label>
-    <input type="text" id="searchText" name="searchText">
+    <input type="text" id="searchText" name="searchText" th:value="${searchText}">
     <label for="minRating">Minimum Rating:</label>
-    <input type="number" id="minRating" name="minRating" min="0" max="10" step="0.1">
+    <input type="number" id="minRating" name="minRating" min="0" max="10" step="0.1" th:value="${minRating}">
+
     <input type="submit" value="Search Events">
   </form>
 <div>
